Criar uma pasta para Request e Resource
